# rust-sandbox

./: Cargo.toml  flake.nix
examples/: async-std-imap.rs  std-http.rs  std-imap.rs  tokio-http.rs  tokio-imap.rs  tokio-plain-imap.rs  tokio-rustls-starttls-imap.rs  tokio-rustls-starttls-smtp.rs
src/: http.rs  imap.rs  lib.rs  socket.rs  starttls.rs  stream.rs
