[package]
name = "rust-sandbox"
description = "Rust sandbox"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
bytes = "1"
futures = "0.3.31"
rustls-platform-verifier = "0.4.0"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros", "time", "net", "io-util"] }
tokio-rustls = "0.26.0"
